--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,16 @@ h5 {
   /* text-decoration: overline underline; */
   border-top: 4px solid black;
   border-bottom: 4px solid black;
+  text-align: center;
 }
+
+h6 {
+border-top: 4px solid black;
+  border-bottom: 4px solid black;
+  text-align: center;
+}
+
+
 p {
 font-size: 1.5rem;
 }
@@ -116,10 +125,11 @@ Chavela Image & Container
 } */
 
 .quote {
-  background-color: rgba(246, 181, 40, 0.79);
+  background-color: rgb(246, 181, 40);
   text-align: center;
   width: auto;
-  height: 490px;
+  height: 400px;
+
   /* i can delete container, b/c i decided not to use flexbox for this section */
 }
 /* .box-2 {
@@ -139,9 +149,16 @@ Chavela Image & Container
   
 }
 
+@media (max-width: 916px) {
+  .quote-resize {
+    font-size: 2rem;
+
+  }
+}
 
 
-.btn-hero {
+
+/* .btn-hero {
   display: inline-block;
   padding:1rem 1rem;
   margin:1rem;
@@ -154,7 +171,55 @@ Chavela Image & Container
   background-color:#4eb5f1; 
   text-align:center;
   text-transform: uppercase;
+} */
+
+.btn-position {
+  text-align: center; 
+  position: absolute;
+  top: 47%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
+
+
+@media (max-width: 916px) {
+  .btn-position {
+    /* top: 50%; */
+    bottom: 37%;
+
+  }
+}
+
+
+.btn-hero {
+  display: inline-block;
+  width: 200px;
+  padding: 8px;
+  color: black;
+  font-size: 1rem;
+  font-family: "Catamaran", sans-serif;
+  background-color: transparent;
+  border: 3px solid black;
+  border-radius: 5px;
+  text-align: center;
+  outline: none;
+  text-decoration: none;
+  transition: color 0.3s ease-out,
+              background-color 0.3s ease-out,
+              border-color 0.3s ease-out;
+}
+
+.btn-hero:hover,
+.btn-hero:active {
+  background-color: #778b3b;
+  border-color: black;
+  color: black;
+  transition: color 0.3s ease-in,
+              background-color 0.3s ease-in,
+              border-color 0.3s ease-in;
+}
+
+
 
 .chavela-img {
   padding-top: 40px;
@@ -192,6 +257,7 @@ Chavela Image & Container
 li {
   margin: 16px 0;
 }
+
 @media (min-width: 460px) {
   li {
     font-size: 1.5rem;
@@ -231,7 +297,7 @@ a:hover {
   animation: bounce 2s ease-in-out infinite;
 }
 .sidebar-toggle:hover {
-  color: red;
+  color: #778b3b;
 }
 @keyframes bounce {
   0% {
@@ -247,7 +313,8 @@ a:hover {
 
 .sidebar-header {
   display: relative;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  justify-content: left;
   align-items: center;
   padding: 1rem 1.5rem;
 }
@@ -255,10 +322,11 @@ a:hover {
   font-size: 1.75rem;
   background: transparent;
   border-color: transparent;
-  color: red;
+  color: #778b3b;
   transition: all 0.3s linear;;
   cursor: pointer;
-  color: blue;
+  
+  
 } */
 .close-btn:hover {
   color: red;
@@ -266,15 +334,16 @@ a:hover {
 }
 
 .links {
-  text-decoration-color: black;
+  list-style-type: none;
 }
 .links a {
-  display: block;
+  display: inline-block;
   font-size: 1.5rem;
   text-transform: capitalize;
-  padding: 1rem 1.5rem;
-  color: grey;
-  transition: all 0.3s linear;;
+  padding: 1.5rem 1.5rem;
+  color: black;
+  transition: all 0.3s linear;
+  
 }
 /* .links a:hover {
   background: orange;
@@ -288,16 +357,15 @@ a:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background: black; 
-
+  background: rgb(238, 168, 37); 
+  text-align:end;
   /* display: grid; */
   /* grid-template-rows: auto 1fr auto; */
   /* row-gap: 1rem; */
-
-
-  box-shadow: yellow;
   transition: all 0.3s linear;
   transform: translate(-100%);
+  z-index: 500;
+
 }
 
 .show-sidebar {
