--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,12 @@ h1 {
     -1px 1px 0 #000,
     1px 1px 0 #000;
 }
+@media (max-width: 916px) {
+  h1 {
+    font-size: 2rem;
+
+  }
+}
 
 h3 {
   font-size: 3rem;
@@ -176,7 +182,7 @@ Chavela Image & Container
 .btn-position {
   text-align: center; 
   position: absolute;
-  top: 47%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
